Replaced secondary div container with a black border. This is in turn solved the problem of clearing both divs after adding auto overflow to the css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ body {
 	position:absolute;
 	width: 100%;
 }
+/*
 #background-pallette {
 	position: relative;
 	margin-top: 20px;
@@ -28,15 +29,23 @@ body {
 	float:center;
 	background-color: black;
 
+
 }
+*/
 
 #background-screen{
 	width: auto;	
 	background-color: #FFFFF2;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-left: 10px;
+	padding-bottom: 50px;
+	margin-bottom: 5px;
+	margin-right: 5%;
+	margin-left: 5%;
 	margin-top: 10px;
+	border-style: solid;
+	border-color: black;
+	border-width: 5px;
+	clear: both;
+
 }
 /*
 #background_tab{
@@ -164,26 +173,7 @@ footer {
 
 
 
-/*experiment */
 
-.faded_out{
-	display: none;
-}
-.selected{}
-
-hr {
-  border:none;
-  border-top:2px dotted #f00;
-  color:#fff;
-  background-color:#fff;
-  height:1px;
-  width:75%;
-}
-/* About Us */
-
-#all_about_us_container{
-	margin-top: 50px;
-}
 
 /* Map */
 
@@ -222,3 +212,27 @@ iframe{
 
 }
 
+/*experiment */
+
+.faded_out{
+	display: none;
+}
+.selected{}
+
+hr {
+  border:none;
+  border-top:2px dotted #f00;
+  color:#fff;
+  background-color:#fff;
+  height:1px;
+  width:75%;
+}
+/* About Us */
+
+#all_about_us_container{
+	margin-top: 50px;
+}
+
+#all_location_container{
+	overflow: auto;
+}
